css/me.css
:root{
  --clr-bg: #242424;
  --clr-dark: #2d2d2d;
  --clr-light: #646464;
  --clr-red: #ff3d3d;
  --clr-green: #3dff3d;
  --clr-blue: #00bbff;
  --clr-white: #ffffff;
}

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html,
body{
  background-color: var(--clr-bg);
  height: 100%;
  font-family: monospace;
  font-family: 'Comfortaa', cursive;
  user-select: none;
  scroll-behavior: smooth;
}

img{
  width: 100%;
  height: 100%;
}

h1{
  font-size: 3em;
  color: var(--clr-red);
  text-align: center;
}

h2,
h3{
  margin-top: 6%;
  text-align: center;
  color: var(--clr-green);
}

hr{
  color: var(--clr-green);
  margin: auto;
  margin: 0.5rem;
}

hr.bar{
  color: inherit;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.3rem;
  height: 0.5rem;
  background-color: var(--clr-dark);
  border-radius: 0.3rem;
}

p{
  text-align: justify;
}

a{
  transition: 250ms;
  color: inherit;
  text-decoration: underline dashed;
}

a:hover,
a:focus-within{
  text-decoration: underline double;
  color: var(--clr-green);
}

i.underscore{
  color: var(--clr-light);
  animation: ani-blank-inf 1s ease-in-out infinite;
}
  
@keyframes ani-blank-inf {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }
}

.background-image {
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  background-blend-mode: overlay;
  background-color: inherit;
}

.bg-code {
  background-image: url(../media/portfolio/coding.png);
}

.bg-cpu {
  background-image: url(../media/portfolio/cpu.png);
}

.flex-element{
  display: flex;
  flex-wrap: wrap;
}

.main-element{
  width: 100%;
  height: 100%;
}

.main-element:nth-of-type(even){
  background-color: var(--clr-dark);
}

.center-75{
  width: 75%;
  height: 100%;
  margin: auto;
}

.center-85{
  width: 85%;
  height: 100%;
  margin: auto;
}

.vert-center-container{
  width: 100%;
  height: fit-content;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.avatar-wrapper{
  height: 30%;
  min-height: 10em;
  max-height: 15em;
  width: 30%;
  min-width: 10em;
  max-width: 15em;
  margin: auto;
  border-radius: 25%;
  padding: 0.5em;
  transition: 500ms;
}

.avatar-wrapper:hover,
.avatar-wrapper:focus-within{
  transform: scale(1.1);
}

.title-wrapper{
  width: fit-content;
  margin: auto;
  transition: 500ms;
}

.title-wrapper:hover,
.title-wrapper:focus-within{
  transform: scale(1.1);
}

.title-wrapper:hover > h1,
.title-wrapper:focus-within > h1{
  animation: clr-fade 8s infinite;
}

@keyframes clr-fade {
  0%{
    color: var(--clr-red);
  }
  33%{
    color: var(--clr-green);
  }
  66%{
    color: var(--clr-blue);
  }
}

.tags-container{
  width: fit-content;
  margin: auto;
  font-size: 1.25em;
  color: var(--clr-blue);
  margin-bottom: 8%;
  margin-top: 2%;
}

.tag-element{
  padding: 0.5em;
}

.tag-element:nth-of-type(odd){
  cursor: help;
}

.tag-element > p{
  text-align: center;
}

.description-wrapper{
  width: 75%;
  margin: auto;
}

.description-wrapper > p{
  color: var(--clr-white);
  line-height: 1.45rem;
  font-size: 1.15rem;
  text-indent: 2rem;
}

.descr-center > p {
  text-align: center;
}

.subtitle-container{
  width: fit-content;
  margin: auto;
  margin-top: 3rem;
  color: var(--clr-green);
}

.descr-title{
  padding-bottom: 1rem;
}

.title-clr-red{
  color: var(--clr-red);
}

.title-clr-green{
  color: var(--clr-green);
}

.title-clr-blue{
  color: var(--clr-blue);
}

.lang-element-container{
  color: var(--clr-white);
  font-size: 1rem;
  margin: 1.25rem 0;
  padding: 0.5rem 0;
  border-radius: 0.5rem;
  border: 1px solid var(--clr-light);
  background-color: var(--clr-dark);
  outline: 0.25rem solid var(--clr-dark);
  box-sizing: border-box;
  animation: inc-opacity backwards 1s ease;
  animation-delay: calc(0.2s * var(--k));
  transition: transform 300ms ease;
}

.lang-element-container:nth-of-type(even){
  background-color: var(--clr-bg);
}

.lang-element-container:hover,
.lang-element-container:focus-within{
  transform: scale(1.05);
}

.lang-title{
  width: 25%;
  min-width: 5rem;
  text-align: right;
  padding-right: 1rem;
}

.lang-bar{
  animation: backwards 3s inc-width ease;
  animation-delay: calc(0.2s * var(--i));
}

.lang-bar-full{
  width: 50%;
  color: var(--clr-green);
}

.lang-bar-full > hr{
  background-color: var(--clr-green);
}

.lang-bar-upper{
  width: 37.5%;
  color: var(--clr-blue);
}

.lang-bar-upper > hr {
  background-color: var(--clr-blue);
}

.lang-bar-half{
  width: 25%;
  color: var(--clr-light);
}

.lang-bar-half > hr {
  background-color: var(--clr-light);
}

.lang-bar-lower{
  width: 12.5%;
  color: var(--clr-red);
}

.lang-bar-lower > hr {
  background-color: var(--clr-red);
}

.lang-val{
  width: 20%;
  text-align: left;
  padding-left: 1rem;
  color: var(--clr-white);
  animation: inc-opacity backwards 1s ease;
  animation-delay: calc(2.5s + 0.2s * var(--j));
}

.link-container{
  border-radius: 1rem;
  width: 16rem;
  outline: 0.2rem solid var(--clr-light);
  background-color: var(--clr-bg);
  margin: auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
  transition: 500ms ease;
}

.link-container:hover,
.link-container:focus-within{
  background-color: var(--clr-blue);
  /* outline: 0.3rem solid var(--clr-red); */
  transform: scale(1.1) translateY(-1rem);
}

.link-container:hover h2,
.link-container:focus-within h2{
  color: var(--clr-dark);
}

.link-container > a{
  text-decoration: none;
}

.link-wrapper{
  box-sizing: border-box;
  padding: 1rem;
}

.link-img-wrapper{
  width: 5rem;
  height: 5rem;
  box-sizing: border-box;
  margin: auto;
}

.space-3{
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.animate-opacity{
  animation: inc-opacity 1.5s 1s backwards ease;
}

.animate-move-left{
  animation: move-in-left 2s 1s backwards ease;
}

.animate-move-right {
  animation: move-in-right 2s 2.5s backwards ease;
}

.op0{
  opacity: 0;
}

.footer-container{
  height: 5rem;
  width: 100%;
}

.footer-element {
  height: 100%;
  padding: 1rem;
  box-sizing: border-box;
  line-height: 3rem;
  font-size: 1rem;
  color: var(--clr-white);
  width: 25%;
}

.socials-container{
  width: 50%;
}

.socials-container > div{
  width: fit-content;
  margin: auto;
}

.social-wrapper{
  width: 3rem;
  height: 3rem;
  margin: 0 0.5rem;
  transition: 250ms;
}

.social-wrapper:hover,
.social-wrapper:focus-within{
  transform: scale(1.5) translateY(-1rem);
}

.to-top{
  text-align: right;
}

@media screen and (max-width: 42rem) {
  .center-75 {
    width: 100%;
  }

  .description-wrapper {
    width: 95%;
  }

  .description-wrapper > p{
    font-size: 1rem;
    line-height: 1.2rem;
  }
}

@media screen and (min-width: 50rem) {
  .lang-element-container{
    width: calc(50rem - 15%);
    margin-left: auto;
    margin-right: auto;
  }
}

@keyframes inc-width {
  0%{
    width: 0%;
    opacity: 0;
  }
}

@keyframes inc-opacity {
  0%{
    opacity: 0;
  }
  100%{
    opacity: 1;
  }
}

@keyframes move-in-left {
  0%{
    opacity: 0;
    transform: translateX(-100%);
  }
  100%{
    opacity: 1;
  }
}

@keyframes move-in-right{
  0%{
    opacity: 0;
    transform: translateX(100%);
  }
  100% {
    opacity: 1;
  }
}

